--- a/templates/index.html
+++ b/templates/index.html
@@ -6,20 +6,22 @@
     <table class="f6 w-100 mw8 center" cellspacing="0">
       <thead>
         <tr>
-          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">UUID</th>
+          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Title</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Company</th>
           <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">Category</th>
+          <th class="fw6 bb b--black-20 tl pb3 pr3 bg-white">UUID</th>
         </tr>
       </thead>
       <tbody class="lh-copy">
         {{ range .Postmortems }}
         <tr>
-          <td class="pv3 pr3 bb b--black-20"><a href="/postmortem/{{ .UUID }}">{{ .UUID }}</a></td>
+          <td class="pv3 pr3 bb b--black-20">{{ .Title }}</td>
           <td class="pv3 pr3 bb b--black-20">{{ .Company }}</td>
           <td class="pv3 pr3 bb b--black-20">
             {{ range .Categories }}
             <a href="/category/{{ . }}">{{ . }}</a>
             {{end}}
+          <td class="pv3 pr3 bb b--black-20"><a href="/postmortem/{{ .UUID }}">{{ .UUID }}</a></td>
           </td>
 
         </tr>
